--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
         "@babel/plugin-transform-modules-commonjs": "^7.22.5",
         "@environment-safe/chai": "^0.2.0",
         "@environment-safe/commonjs-builder": "^0.0.3",
+        "@environment-safe/console-intercept": "^0.1.0",
         "@environment-safe/jsdoc-builder": "^0.0.2",
         "@open-automaton/moka": "^0.5.2",
         "babel-plugin-search-and-replace": "^1.1.1",
@@ -102,6 +103,8 @@
         "prepare": "husky install"
     },
     "dependencies": {
+        "@ansi-art/color": "^3.0.0-alpha4",
+        "@ansi-art/table": "^3.0.0-alpha3",
         "browser-or-node": "^2.1.1"
     }
 }
